Fix sidebar button on mobile resolution

--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -21,34 +21,58 @@
 
 .navButton {
   position: fixed;
-  top: 15px;
-  left: 15px;
-  max-width: 5vw;
-  max-height: 5vw;
+  top: 1%;
+  left: 1%;
+  width: 64px;
+  height: 64px;
   padding: 8px;
   z-index: 999;
 }
 
 .navIcon {
   content: url(../../assets/icons/hamburger.png);
-  width: 100%;
-  height: 100%;
+  width: 48px;
+  height: 48px;
 }
 
 .xButton {
   position: relative;
-  top: 15px;
-  left: 15px;
-  max-width: 5vw;
-  max-height: 5vw;
+  top: 1%;
+  left: 1%;
+  width: 64px;
+  height: 64px;
   padding: 8px;
   z-index: 999;
 }
 
 .xIcon {
   content: url(../../assets/icons/xmark.png);
-  width: 100%;
-  height: 100%;
+  width: 48px;
+  height: 48px;
+}
+
+@media screen and (max-width: 480px) {
+  .navButton {
+    width: 32px;
+    height: 32px;
+    padding: 4px;
+  }
+
+  .navIcon {
+    width: 24px;
+    height: 24px;
+  }
+
+  .xButton {
+    width: 32px;
+    height: 32px;
+    padding: 4px;
+  }
+
+  .xIcon {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .navGrid {
